# project_harimau

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  CHANGELOG.md  Dockerfile  GEMINI.MD  README.md  claude-fable-review-9jul26.md  claude-fable-review-agent-prompt-9jul26.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  cloudbuild.yaml  cloudrun-service-backend.yaml  code_review.md  debug_mcp.py  debug_triage.py  deploy.sh  docker-compose.yml  download_reports.py  inspect_mcp_app.py  inspect_mcp_app_2.py  inspect_mcp_routes.py  push_secrets.sh  requirements.txt  sprint_1.md  sql_test.py  triageagent_mcp_output.json  verify_deploy.py  verify_triage.py  verify_webrisk.py
old_archive/: .gitignore  GEMINI.MD  cloudrun-service-gti.yaml  inspect_mcp.py  pyproject.toml  requirements.txt
old_archive/backend/: Dockerfile  database.py  graph_workflow.py  logging_config.py  models.py
old_archive/backend/agents/: synthesis.py  triage.py
old_archive/backend/graph/: kuzu_manager.py  schema.py
old_archive/backend/utils/: gti_parser.py  ioc_utils.py
old_archive/docs/: dom_agent_instructions.md  dom_benchmark_guide.md  dom_implementation_guide.md  progress.md
old_archive/docs/example_json_responses/google-threat-intel/hash/: get_file_behaviour_summary.json  get_file_relationships_associations.json  get_file_report.json
old_archive/mcp-servers/gti-server/: README_VENDOR.md
old_archive/mcp-servers/gti-server/gti_mcp/: server.py
old_archive/mcp-servers/gti-server/tests/: test_files_errors.py  test_tools.py
old_archive/tests/: test_triage_manual.py
(+104 files in other folders)
