[project]
name = "project-harimau"
version = "0.1.0"
description = "Project Harimau: Cloud-Native Threat Hunter"
authors = [{name = "Dominic Chua", email = "dominicchua@google.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.10",
    "langchain-google-vertexai>=0.0.5",
    "langchain-core",
    "langchain-community",
    "pydantic>=2.0.0",
    "typer>=0.9.0",         # For CLI
    "python-dotenv",
    "rich",                 # For pretty CLI output
    "mcp[cli]",             # Model Context Protocol
    "langsmith",            # Observability
    "opentelemetry-api",
    "opentelemetry-sdk",
    "google-cloud-logging", # Structured Logging
    "networkx",             # Fallback graph memory
    "kuzu"                  # Embedded Graph DB
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_harimau"]
